vlib/v/checker/tests/struct_non_ptr_field_nil_default_value_err.vv
interface SomeInterface{}

struct Foo {
  bar SomeInterface = unsafe{ nil }
}
fn main() {
  foo := Foo{}
  dump(foo)
}
